# sp_utils

./: .gitignore  README.md  build.py  main.py  meta.json  pyproject.toml
src/: args.py  pre_instalacao.py
src/utils/: terminal.py
