[project]
name = "sp-utils"
version = "0.1.0"
description = ""
authors = [
    {name = "T-Terra",email = "gabst138@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
nuitka = "^2.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
